kube/components/aix/mysql/aix-mysql-egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aix-mysql-egress-policy
  namespace: aix
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Egress
  egress: []
