kube/components/aix/mysql/aix-mysql-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aix-mysql-ingress-policy
  namespace: aix
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: moat
      ports:
        - protocol: TCP
          port: 3306
